<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/display_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/online_image_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/default_image_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_color"
            android:fitsSystemWindows="false">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_logo"
                android:padding="@dimen/_100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cart_display_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_bg_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cart_left_view"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="match_parent"
            android:background="@color/grey_color"
            app:layout_constraintHorizontal_weight=".4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cart_right_view">

            <LinearLayout
                android:id="@+id/product_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0sdp"
                android:layout_gravity="center"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/logo_view">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:iss_auto_cycle="true"
                    app:iss_delay="3000"
                    app:iss_no_dots="true"
                    app:iss_period="3000"
                    app:iss_text_align="CENTER" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logo_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/powered_by" />

                <ImageView
                    android:layout_width="@dimen/_100dp"
                    android:layout_height="@dimen/_100dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:src="@drawable/app_logo" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cart_right_view"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="match_parent"
            android:background="@color/white_color"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintStart_toEndOf="@+id/cart_left_view"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/empty_screen_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/emptycart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:gravity="center"
                    android:text="@string/no_product_added"
                    android:textColor="@color/black_color"
                    style="@style/TextAppearance.AppCompat.Medium"/>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cart_details_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/order_holder_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_0sdp"
                    android:orientation="vertical"
                    android:background="@color/white_color"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_marginBottom="@dimen/_5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/payment_total_layout">

                    <include
                        layout="@layout/payment_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </include>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/payment_total_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_10dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5dp"
                        android:layout_marginRight="@dimen/_5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/subtotal_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoSizeTextType="uniform"
                            android:text="@string/sub_total"
                            android:textAlignment="textStart"
                            style="@style/TextAppearance.AppCompat.Subhead"/>

                        <TextView
                            android:id="@+id/discount_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoSizeTextType="uniform"
                            android:text="@string/discount"
                            android:textAlignment="textStart"
                            style="@style/TextAppearance.AppCompat.Subhead" />

                        <TextView
                            android:id="@+id/tax_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoSizeTextType="uniform"
                            android:textAlignment="textStart"
                            android:text="@string/tax"
                            style="@style/TextAppearance.AppCompat.Subhead" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:layout_marginRight="@dimen/_10dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/total_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/grand_total"
                            android:textAlignment="textStart"
                            android:layout_weight="0.8"
                            style="@style/TextAppearance.AppCompat.Subhead" />

                        <TextView
                            android:id="@+id/paid_due_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/paid"
                            android:textAlignment="textStart"
                            android:textColor="@color/red_color"
                            style="@style/TextAppearance.AppCompat.Body1" />

                        <TextView
                            android:id="@+id/balance_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/balance"
                            android:textAlignment="textStart"
                            android:textColor="@color/red_color"
                            style="@style/TextAppearance.AppCompat.Body2" />


                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/change_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/change_due_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </include>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/powered_by" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/app_logo" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>